--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,10 @@
 <resources>
-    <string name="app_name">ContatosPdm</string>
-    <string name="lista_contatos">Lista de contatos</string>
-    <string name="contact">Contato</string>
-    <string name="name">Name</string>
-    <string name="address">Address</string>
-    <string name="phone">Phone</string>
-    <string name="email">Email</string>
-    <string name="save">Save</string>
-    <string name="add_contact">Add contact</string>
-    <string name="remove_contact">Remove contact</string>
-    <string name="edit_contact">Edit contact</string>
-    <string name="AmountToPaid">amount to paid</string>
-    <string name="receive">receive</string>
-    <string name="paid">paid</string>
+    <string name="app_name">SplitTheBill</string>
+    <string name="name">Nome</string>
+    <string name="value">Valor</string>
+    <string name="description">Descrição</string>
+    <string name="save">SALVAR</string>
+    <string name="CALCULAR">CALCULAR</string>
+    <string name="adicionar_pessoa">Adicionar Pessoa</string>
+    <string name="rachar_conta">Rachar Conta</string>
 </resources>
